[gd_scene load_steps=9 format=2]

[ext_resource path="res://Flame.gd" type="Script" id=1]
[ext_resource path="res://flame_effect/FlameEffect.tscn" type="PackedScene" id=2]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.222222, 0.42963, 0.6, 0.77037, 1 )
colors = PoolColorArray( 1, 0.980713, 0.691406, 1, 1, 0.97403, 0.421875, 1, 1, 0.811289, 0.191406, 1, 1, 0.454796, 0.0664063, 1, 0.993164, 0.250898, 0.0310364, 1, 0.954102, 0.0111809, 0.0111809, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Curve" id=3]
min_value = -100.0
max_value = 100.0
_data = [ Vector2( 0, 36.52 ), 0.0, -48.2607, 0, 0, Vector2( 0.343128, 8.36001 ), -161.818, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
flag_disable_z = true
spread = 1.0
gravity = Vector3( -10, 0, 0 )
initial_velocity = 15.0
initial_velocity_random = 0.5
angular_velocity = -4.00414e+028
orbit_velocity = 0.03
orbit_velocity_random = 1.0
linear_accel_curve = SubResource( 4 )
radial_accel = 10.0
radial_accel_random = 1.0
scale = 0.5
scale_random = 1.0
color_ramp = SubResource( 2 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 9.38958, 0.153873 )

[node name="Flame" type="Area2D"]
scale = Vector2( 10, 20 )
collision_layer = 8
collision_mask = 5
script = ExtResource( 1 )
damage = 5

[node name="Sprite" type="Sprite" parent="."]

[node name="Particles2D" type="Particles2D" parent="."]
scale = Vector2( 2, 2 )
amount = 700
local_coords = false
process_material = SubResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 9.20461, 0.0103518 )
shape = SubResource( 6 )

[node name="FlameEffect" parent="." instance=ExtResource( 2 )]
visible = false

[connection signal="body_entered" from="." to="." method="_on_Flame_body_entered"]
[connection signal="animation_finished" from="FlameEffect" to="." method="_on_FlameEffect_animation_finished"]
